tests/base/parser/bad/exps/exp_t-fun-lparen-with.scilexp
fun (X : Bool) => X (* should be 'x' *)
